# final

./: .env.local  Dockerfile.base  MakeFile  README.md  alembic.ini  docker-compose.yml  env.example  package-lock.json  package.json  pyproject.toml
.github/workflows/: backend-ci.yml  frontend-ci.yml
alembic/: env.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/public/: manifest.json  sw.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: axios.ts
gateway/: Dockerfile  railway.toml  requirements.txt
gateway/app/: main.py  start.py
public/: mainfest.json
service/account-service/: Dockerfile  README.md  requirements.txt
service/account-service/app/: main.py
service/assesment-service/: Dockerfile  requirements.txt
service/assesment-service/app/: main.py
service/assessment-service/: Dockerfile
service/assessment-service/app/: main.py
service/chatbot-service/: Dockerfile  requirements.txt
service/chatbot-service/app/: main.py
service/monitoring-service/: Dockerfile
service/monitoring-service/app/: main.py
service/normal-service/app/: main.py
service/regulation-service/: Dockerfile
service/regulation-service/app/: main.py
service/report-service/: Dockerfile
service/report-service/app/: main.py
service/request-service/: Dockerfile
service/response-service/: Dockerfile
service/sharing-service/: Dockerfile
service/solution-service/: Dockerfile
service/solution-train/: README.md  requirements.txt  train.jsonl
src/lib/: axios.ts
src/store/: useStore.ts
(+75 files in other folders)
